--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-backbone",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "A React Native RESTful API kit that use the fetch method",
   "main": "src/index.js",
   "scripts": {
@@ -23,9 +23,8 @@
   },
   "homepage": "https://github.com/peter4k/react-native-backbone#readme",
    "dependencies" : { 
-    "backbone": ">1.3.3",
-    "realm": ">0.13.2",
-    "shortid": ">2.2.6",
-    "underscore": ">1.8.3"
+    "backbone": ">=1.3.3",
+    "shortid": ">=2.2.6",
+    "underscore": ">=1.8.3"
   }
 }
